--- a/index.html
+++ b/index.html
@@ -1,2 +1,18 @@
-<canvas id="myCanvas" width="500" height="500" style="border:1px solid #000000;"></canvas>
+<div id="stage">
+    <canvas id="u-layer" width="1024" height="1024"></canvas>
+    <canvas id="g-layer" width="1024" height="1024"></canvas>
+    <canvas id="b-layer" width="1024" height="1024"></canvas>
+  </div>
+
+  <style>
+    #stage {
+      position: relative;
+      border: 2px solid black
+    }
+    canvas { position: absolute; }
+    #u-layer { z-index: 3 }
+    #g-layer { z-index: 2 }
+    #b-layer { z-index: 1 }
+  </style>
+
 <script src="./quadtree.js"></script>
